Fixed Snackbar cursor, added z-index

--- a/src/components/Snackbar.module.css
+++ b/src/components/Snackbar.module.css
@@ -1,5 +1,6 @@
 .container-open {
-  @apply fixed bottom-4 left-1/2 transform -translate-x-1/2
+  @apply z-50
+    fixed bottom-4 left-1/2 transform -translate-x-1/2
     rounded shadow-lg
     px-10 py-6
     bg-gray-800 text-white
@@ -13,5 +14,6 @@
 .icon {
   @apply absolute top-1 right-1
     p-1
-    text-2xl text-gray-500 hover:text-white;
+    text-2xl text-gray-500 hover:text-white
+    cursor-pointer;
 }
